# paxos

./: .gitignore  CMakeLists.txt  Readme.md
include/: driver.h  message.h  paxos.h  persistence.h  serialization.h  socket.h  state_persister.h
src/: driver.cpp  message.cpp  paxos.cpp  persistence.cpp  server.cpp  socket.cpp  state_persister.cpp
test/: CMakeLists.txt  test_message.cpp  test_paxos.cpp  test_socket.cpp  test_state_persister.cpp
test/include/: fake_state_persister.h
test/src/: fake_state_persister.cpp
